--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
         <div class="container">
           <h2 class="section-title-feature">Особености</h2>
           <ul class="feature-list">
-            <li class="item">
+            <li class="item icon-antenna">
               <h3 class="list-title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-clock">
               <h3 class="list-title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-diagram">
               <h3 class="list-title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-astronaut">
               <h3 class="list-title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
