--- a/index.html
+++ b/index.html
@@ -167,6 +167,35 @@
           <a href="info@example.com" class="order-title-list">info@example.com</a>
           <a href="tel:+380961111111" class="order-title-list">+38 096 111 11 11</a>
         </address>
+        <div class="footer-container">
+          <p class="order-sets">присоединяйтесь</p>
+          <ul class="sets-list">
+            <li>
+              <a href=""
+                ><svg class="icon-instagram" widht="44" hight="44">
+                  <use href="./images/symbol-defs2.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><svg class="icon-twitter">
+                  <use href="./images/symbol-defs2.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><svg class="icon-facebook">
+                  <use href="./images/symbol-defs2.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><svg class="icon-linkedin">
+                  <use href="./images/symbol-defs2.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
