--- a/index.html
+++ b/index.html
@@ -1,202 +1,201 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body class="text-style">
-    <!--Шапка сайту-->
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+		/>
+		<title>Document</title>
+		<link rel="stylesheet" href="./css/main.css" />
+	</head>
+	<body class="text-style">
+		<!--Шапка сайту-->
 
-    <header>
-      <div class="container main-nav">
-        <a href="index.html" class="logo"> <span class="style-logo">Web</span>Studio</a>
-        <nav>
-          <ul class="site-nav list">
-            <li class="item"><a href="./stydia.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="item"><a href="index.html" class="link">Контакты</a></li>
-          </ul>
-        </nav>
+		<header>
+			<div class="container main-nav">
+				<a href="index.html" class="logo">
+					<span class="style-logo">Web</span>
+					Studio
+				</a>
+				<nav>
+					<ul class="site-nav list">
+						<li class="item"><a href="index.html" class="link">Студия</a></li>
+						<li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+						<li class="item"><a href="index.html" class="link">Контакты</a></li>
+					</ul>
+				</nav>
 
-        <ul class="contacts-list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon-mail">
-                <use href="./images/symbol-defs2.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link">
-              <svg class="icon-phone">
-                <use href="./images/symbol-defs2.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </div>
-    </header>
+				<ul class="contacts-list">
+					<li class="item">
+						<a href="mailto:info@devstudio.com" class="link">
+							<svg class="icon-mail">
+								<use href="./images/symbol.svg#icon-mail"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li class="item">
+						<a href="tel:+380961111111" class="link">
+							<svg class="icon-phone">
+								<use href="./images/symbol.svg#icon-phone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
+					</li>
+				</ul>
+			</div>
+		</header>
 
-    <main>
-      <!--Заказ услуги-->
+		<main>
+			<!--Заказ услуги-->
 
-      <section class="name">
-        <div class="container">
-          <h1 class="name-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="button" type="button">Заказать услугу</button>
-        </div>
-      </section>
+			<section class="name">
+				<div class="container">
+					<h1 class="name-title">Эффективные решения для вашего бизнеса</h1>
+					<button class="button" type="button">Заказать услугу</button>
+				</div>
+			</section>
 
-      <!--Особености-->
+			<!--Особености-->
 
-      <section class="section">
-        <div class="container">
-          <h2 class="section-title-feature">Особености</h2>
-          <ul class="feature-list">
-            <li class="item icon-antenna">
-              <h3 class="list-title">Внимание к деталям</h3>
-              <p class="text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
-            </li>
-            <li class="item icon-clock">
-              <h3 class="list-title">Пунктуальность</h3>
-              <p class="text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
-            </li>
-            <li class="item icon-diagram">
-              <h3 class="list-title">Планирование</h3>
-              <p class="text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
-            </li>
-            <li class="item icon-astronaut">
-              <h3 class="list-title">Современные технологии</h3>
-              <p class="text">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
+			<section class="section">
+				<div class="container">
+					<h2 class="section-title-feature">Особености</h2>
+					<ul class="feature-list">
+						<li class="item icon-antenna">
+							<h3 class="list-title">Внимание к деталям</h3>
+							<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						</li>
+						<li class="item icon-clock">
+							<h3 class="list-title">Пунктуальность</h3>
+							<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						</li>
+						<li class="item icon-diagram">
+							<h3 class="list-title">Планирование</h3>
+							<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						</li>
+						<li class="item icon-astronaut">
+							<h3 class="list-title">Современные технологии</h3>
+							<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						</li>
+					</ul>
+				</div>
+			</section>
 
-      <!--Чем мы занимаемся-->
+			<!--Чем мы занимаемся-->
 
-      <section class="section-work">
-        <div class="container">
-          <h2 class="section-title-work">Чем мы занимаемся</h2>
-          <ul class="section-list">
-            <li class="section-item">
-              <img src="./images/box_1.jpg" alt="Написання коду HTML" width="370" height="294" />
-            </li>
-            <li class="section-item">
-              <img
-                src="./images/box_2.jpg"
-                alt="Стилізація HTML з допомогою CSS"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li class="section-item">
-              <img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
-            </li>
-          </ul>
-        </div>
-      </section>
+			<section class="section-work">
+				<div class="container">
+					<h2 class="section-title-work">Чем мы занимаемся</h2>
+					<ul class="section-list">
+						<li class="section-item">
+							<img src="./images/box_1.jpg" alt="Написання коду HTML" width="370" height="294" />
+						</li>
+						<li class="section-item">
+							<img src="./images/box_2.jpg" alt="Стилізація HTML з допомогою CSS" width="370" height="294" />
+						</li>
+						<li class="section-item">
+							<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+						</li>
+					</ul>
+				</div>
+			</section>
 
-      <!--Наша команда-->
+			<!--Наша команда-->
 
-      <section class="section-padding">
-        <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="comands-list">
-            <li class="comand-item">
-              <img src="./images/team_lead1.jpg" alt="Product Designer" width="270" />
-              <div class="comand-list">
-                <h3 class="title-name">Игорь Демьяненко</h3>
-                <p class="text-title">Product Designer</p>
-              </div>
-            </li>
-            <li class="comand-item">
-              <img src="./images/team_lead2.jpg" alt="Frontend Developer" width="270" />
-              <div class="comand-list">
-                <h3 class="title-name">Ольга Репина</h3>
-                <p class="text-title">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="comand-item">
-              <img src="./images/team_lead3.jpg" alt="Marketing" width="270" height="260" />
-              <div class="comand-list">
-                <h3 class="title-name">Николай Тарасов</h3>
-                <p class="text-title">Marketing</p>
-              </div>
-            </li>
-            <li class="comand-item">
-              <img src="./images/team_lead4.jpg" alt="UI Designer" width="270" />
-              <div class="comand-list">
-                <h3 class="title-name">Михаил Ермаков</h3>
-                <p class="text-title">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
+			<section class="section-padding">
+				<div class="container">
+					<h2 class="section-title">Наша команда</h2>
+					<ul class="comands-list">
+						<li class="comand-item">
+							<img src="./images/team_lead1.jpg" alt="Product Designer" width="270" />
+							<div class="comand-list">
+								<h3 class="title-name">Игорь Демьяненко</h3>
+								<p class="text-title">Product Designer</p>
+							</div>
+						</li>
+						<li class="comand-item">
+							<img src="./images/team_lead2.jpg" alt="Frontend Developer" width="270" />
+							<div class="comand-list">
+								<h3 class="title-name">Ольга Репина</h3>
+								<p class="text-title">Frontend Developer</p>
+							</div>
+						</li>
+						<li class="comand-item">
+							<img src="./images/team_lead3.jpg" alt="Marketing" width="270" height="260" />
+							<div class="comand-list">
+								<h3 class="title-name">Николай Тарасов</h3>
+								<p class="text-title">Marketing</p>
+							</div>
+						</li>
+						<li class="comand-item">
+							<img src="./images/team_lead4.jpg" alt="UI Designer" width="270" />
+							<div class="comand-list">
+								<h3 class="title-name">Михаил Ермаков</h3>
+								<p class="text-title">UI Designer</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</main>
 
-    <!--Page Footer-->
+		<!--Page Footer-->
 
-    <footer class="order">
-      <div class="container">
-        <a href="index.html" class="logo-footer"> <span class="style-logo">Web</span>Studio</a>
-        <address class="order-title">
-          г. Киев, пр-т Леси Украинки, 26
-          <a href="info@example.com" class="order-title-list">info@example.com</a>
-          <a href="tel:+380961111111" class="order-title-list">+38 096 111 11 11</a>
-        </address>
-        <div class="footer-container">
-          <p class="order-sets">присоединяйтесь</p>
-          <ul class="sets-list">
-            <li>
-              <a href=""
-                ><svg class="icon-instagram" widht="44" hight="44">
-                  <use href="./images/symbol-defs2.svg#icon-instagram"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a href=""
-                ><svg class="icon-twitter">
-                  <use href="./images/symbol-defs2.svg#icon-twitter"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a href=""
-                ><svg class="icon-facebook">
-                  <use href="./images/symbol-defs2.svg#icon-facebook"></use></svg
-              ></a>
-            </li>
-            <li>
-              <a href=""
-                ><svg class="icon-linkedin">
-                  <use href="./images/symbol-defs2.svg#icon-linkedin"></use></svg
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </body>
+		<footer class="order">
+			<div class="container foot">
+				<div class="order-adress">
+					<a href="index.html" class="logo-footer">
+						<span class="style-logo">Web</span>
+						Studio
+					</a>
+					<address class="order-title">
+						г. Киев, пр-т Леси Украинки, 26
+						<a href="info@example.com" class="order-title-list">info@example.com</a>
+						<a href="tel:+380961111111" class="order-title-list">+38 096 111 11 11</a>
+					</address>
+				</div>
+				<div class="footer-container">
+					<p class="order-sets">присоединяйтесь</p>
+					<ul class="sets-list">
+						<li class="icon-button">
+							<a class="icons" href="instagram">
+								<svg class="footer-icon" width="20" height="20">
+									<use href="./images/symbol.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-button">
+							<a class="icons" href="twiter">
+								<svg class="footer-icon" width="20" height="20">
+									<use href="./images/symbol.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-button">
+							<a class="icons" href="facebook">
+								<svg class="footer-icon" width="20" height="20">
+									<use href="./images/symbol.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-button">
+							<a class="icons" href="linkedin">
+								<svg class="footer-icon" width="20" height="20">
+									<use href="./images/symbol.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
