--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <a href="index.html" class="logo"> <span class="style-logo">Web</span>Studio</a>
         <nav>
           <ul class="site-nav list">
-            <li class="item"><a href="./stydia.html" class="link">Студия</a></li>
+            <li class="item"><a href="index.html" class="link">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li class="item"><a href="index.html" class="link">Контакты</a></li>
           </ul>
