comand-icon добавлення іконок

--- a/index.html
+++ b/index.html
@@ -119,6 +119,37 @@
 							<div class="comand-list">
 								<h3 class="title-name">Игорь Демьяненко</h3>
 								<p class="text-title">Product Designer</p>
+
+								<ul class="sets-list">
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="instagram">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="twiter">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="facebook">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="linkedin">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -126,6 +157,37 @@
 							<div class="comand-list">
 								<h3 class="title-name">Ольга Репина</h3>
 								<p class="text-title">Frontend Developer</p>
+
+								<ul class="sets-list">
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="instagram">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="twiter">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="facebook">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="linkedin">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -133,6 +195,37 @@
 							<div class="comand-list">
 								<h3 class="title-name">Николай Тарасов</h3>
 								<p class="text-title">Marketing</p>
+
+								<ul class="sets-list">
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="instagram">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="twiter">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="facebook">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="linkedin">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -140,6 +233,37 @@
 							<div class="comand-list">
 								<h3 class="title-name">Михаил Ермаков</h3>
 								<p class="text-title">UI Designer</p>
+
+								<ul class="sets-list">
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="instagram">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="twiter">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="facebook">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="icon-masenger-comand">
+										<a class="icons-comand" href="linkedin">
+											<svg class="footer-icon" width="20" height="20">
+												<use href="./images/symbol.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 					</ul>
@@ -165,28 +289,28 @@
 				<div class="footer-container">
 					<p class="order-sets">присоединяйтесь</p>
 					<ul class="sets-list">
-						<li class="icon-button">
+						<li class="icon-mesenger-button">
 							<a class="icons" href="instagram">
 								<svg class="footer-icon" width="20" height="20">
 									<use href="./images/symbol.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon-button">
+						<li class="icon-mesenger-button">
 							<a class="icons" href="twiter">
 								<svg class="footer-icon" width="20" height="20">
 									<use href="./images/symbol.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon-button">
+						<li class="icon-mesenger-button">
 							<a class="icons" href="facebook">
 								<svg class="footer-icon" width="20" height="20">
 									<use href="./images/symbol.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon-button">
+						<li class="icon-mesenger-button">
 							<a class="icons" href="linkedin">
 								<svg class="footer-icon" width="20" height="20">
 									<use href="./images/symbol.svg#icon-linkedin"></use>
