--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 				<div class="container">
 					<h2 class="section-title-feature">Особености</h2>
 					<ul class="feature-list">
-						<li class="item icon-antenna">
+						<li class="items icon-antenna">
 							<h3 class="list-title">Внимание к деталям</h3>
 							<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 						</li>
-						<li class="item icon-clock">
+						<li class="items icon-clock">
 							<h3 class="list-title">Пунктуальность</h3>
 							<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 						</li>
-						<li class="item icon-diagram">
+						<li class="items icon-diagram">
 							<h3 class="list-title">Планирование</h3>
 							<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 						</li>
-						<li class="item icon-astronaut">
+						<li class="items icon-astronaut">
 							<h3 class="list-title">Современные технологии</h3>
 							<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
@@ -270,6 +270,34 @@
 				</div>
 			</section>
 		</main>
+
+		<!--Постоянные клиенты-->
+
+		<section class="section-clients">
+			<div class="container">
+				<h2 class="section-title-clients">Постоянные клиенты</h2>
+				<ul class="section-list-clients">
+					<li class="section-item-clients">
+						<img src="./images/box_1.jpg" alt="Написання коду HTML" width="370" height="294" />
+					</li>
+					<li class="section-item-clients">
+						<img src="./images/box_2.jpg" alt="Стилізація HTML з допомогою CSS" width="370" height="294" />
+					</li>
+					<li class="section-item-clients">
+						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+					</li>
+					<li class="section-item-clients">
+						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+					</li>
+					<li class="section-item-clients">
+						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+					</li>
+					<li class="section-item-clients">
+						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+					</li>
+				</ul>
+			</div>
+		</section>
 
 		<!--Page Footer-->
 
