--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div class="comand-list">
 								<h3 class="title-name">Игорь Демьяненко</h3>
 								<p class="text-title">Product Designer</p>
-
+                <div class="container-icon">
 								<ul class="sets-list">
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
@@ -150,6 +150,7 @@
 										</a>
 									</li>
 								</ul>
+                </div>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -157,7 +158,7 @@
 							<div class="comand-list">
 								<h3 class="title-name">Ольга Репина</h3>
 								<p class="text-title">Frontend Developer</p>
-
+                <div class="container-icon">
 								<ul class="sets-list">
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
@@ -188,6 +189,7 @@
 										</a>
 									</li>
 								</ul>
+                </div>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -195,7 +197,7 @@
 							<div class="comand-list">
 								<h3 class="title-name">Николай Тарасов</h3>
 								<p class="text-title">Marketing</p>
-
+                <div class="container-icon">
 								<ul class="sets-list">
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
@@ -226,6 +228,7 @@
 										</a>
 									</li>
 								</ul>
+                </div>
 							</div>
 						</li>
 						<li class="comand-item">
@@ -233,7 +236,7 @@
 							<div class="comand-list">
 								<h3 class="title-name">Михаил Ермаков</h3>
 								<p class="text-title">UI Designer</p>
-
+                <div class="container-icon">
 								<ul class="sets-list">
 									<li class="icon-masenger-comand">
 										<a class="icons-comand" href="instagram">
@@ -264,6 +267,7 @@
 										</a>
 									</li>
 								</ul>
+                </div>
 							</div>
 						</li>
 					</ul>
@@ -278,22 +282,47 @@
 				<h2 class="section-title-clients">Постоянные клиенты</h2>
 				<ul class="section-list-clients">
 					<li class="section-item-clients">
-						<img src="./images/box_1.jpg" alt="Написання коду HTML" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company1"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="section-item-clients">
-						<img src="./images/box_2.jpg" alt="Стилізація HTML з допомогою CSS" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company2"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="section-item-clients">
-						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company3"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="section-item-clients">
-						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company4"></use>
+							</svg>
+						</a>
+					</li>
 					</li>
 					<li class="section-item-clients">
-						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company5"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="section-item-clients">
-						<img src="./images/box_3.jpg" alt="Візуалізація даних" width="370" height="294" />
+						<a class="icons-clients" href="instagram">
+							<svg class="client-list">
+								<use href="./images/symbol.svg#icon-company6"></use>
+							</svg>
+						</a>
 					</li>
 				</ul>
 			</div>
