коригування бази icons.svg

--- a/images/icomoon/demo-external-svg.html
+++ b/images/icomoon/demo-external-svg.html
@@ -17,11 +17,6 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
                 <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
             </div>
         </div>
@@ -72,6 +67,11 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-icons"><use xlink:href="symbol-defs.svg#icon-icons"></use></svg><span class="name"> icon-icons</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-instagram"><use xlink:href="symbol-defs.svg#icon-instagram"></use></svg><span class="name"> icon-instagram</span>
             </div>
         </div>
@@ -92,27 +92,22 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-symbol"><use xlink:href="symbol-defs.svg#icon-symbol"></use></svg><span class="name"> icon-symbol</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-symbol-defs"><use xlink:href="symbol-defs.svg#icon-symbol-defs"></use></svg><span class="name"> icon-symbol-defs</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-symbol-defs2"><use xlink:href="symbol-defs.svg#icon-symbol-defs2"></use></svg><span class="name"> icon-symbol-defs2</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
                 <svg class="icon icon-twitter"><use xlink:href="symbol-defs.svg#icon-twitter"></use></svg><span class="name"> icon-twitter</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-WebStudio"><use xlink:href="symbol-defs.svg#icon-WebStudio"></use></svg><span class="name"> icon-WebStudio</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
             </div>
         </div>
   </div>
