--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 		<header>
 			<div class="container main-nav">
 				<a href="index.html" class="logo">
-					<span class="style-logo">Web</span>
-					Studio
+					<svg class="footer-icon" width="145" height="31"><use href="./images/icons.svg#icon-WebStudio"></use></svg>
 				</a>
 				<nav>
 					<ul class="site-nav list">
@@ -334,8 +333,7 @@
 			<div class="container foot">
 				<div class="order-adress">
 					<a href="index.html" class="logo-footer">
-						<span class="style-logo">Web</span>
-						Studio
+						<svg class="footer-icon" width="145" height="31"><use href="./images/icons.svg#icon-WebStudio"></use></svg>
 					</a>
 					<address class="order-title">
 						г. Киев, пр-т Леси Украинки, 26
