--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -35,7 +34,7 @@
 					<li class="item">
 						<a href="mailto:info@devstudio.com" class="link">
 							<svg class="icon-mail">
-								<use href="./images/icons.svg#icon-mail"></use>
+								<use href="./images/icons.svg#icon-imei"></use>
 							</svg>
 							info@devstudio.com
 						</a>
@@ -333,7 +332,7 @@
 			<div class="container foot">
 				<div class="order-adress">
 					<a href="index.html" class="logo-footer">
-						<svg class="footer-icon" width="145" height="31"><use href="./images/icons.svg#icon-WebStudio"></use></svg>
+						<svg class="footer-icon" width="145" height="31"><use href="./images/icons.svg#icon-WebStudio_footer"></use></svg>
 					</a>
 					<address class="order-title">
 						г. Киев, пр-т Леси Украинки, 26
