--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
@@ -17,7 +15,6 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-
 	<body class="text-style">
 		<!--Шапка сайту-->
 
@@ -38,7 +35,7 @@
 					<li class="item">
 						<a href="mailto:info@devstudio.com" class="link">
 							<svg class="icon-mail">
-								<use href="./images/icons.svg#icon-mail"></use>
+								<use href="./images/icons.svg#icon-imei"></use>
 							</svg>
 							info@devstudio.com
 						</a>
@@ -175,7 +172,9 @@
 			<div class="container foot">
 				<div class="order-adress">
 					<a href="index.html" class="logo-footer">
-						<svg class="footer-icon" width="145" height="31"><use href="./images/icons.svg#icon-WebStudio"></use></svg>
+						<svg class="footer-icon" width="145" height="31">
+							<use href="./images/icons.svg#icon-WebStudio_footer"></use>
+						</svg>
 					</a>
 					<address class="order-title">
 						г. Киев, пр-т Леси Украинки, 26
